--- a/reservia.css
+++ b/reservia.css
@@ -79,6 +79,7 @@ nav a
 {
     color: black;
     text-decoration: none;
+    margin-right: 18px;
 }
 
 a:hover
@@ -123,7 +124,7 @@ a:hover
 
 #logo_loc
 {
-    padding: 15px 20px 15px 20px;
+    padding: 17px 18px 15px 20px;
     border: 1px solid #F2F2F2;
     background-color: #F2F2F2;
     margin-left: 50px;
@@ -169,3 +170,98 @@ input[type="text"]:focus
     outline: none;
 }
 
+
+/*Filtres*/
+
+#filtres
+{
+    display: flex;
+    flex-direction: row;
+    width: 67%;
+    margin-top: 30px;
+    margin-left: 60px;
+    font-weight: bold;
+    font-size: 1.3em;
+    justify-content: space-between;
+    align-items: center;
+}
+
+#economique
+{
+    height: 30px;
+    display: flex;
+    border:2px solid #F2F2F2;
+    padding: 10px 20px 10px 0;
+    border-radius: 40px;
+    align-items: center;
+}
+
+#logo_billet
+{
+    border:1px solid #DEEBFF;
+    background-color: #DEEBFF;
+    border-radius: 40px;
+    padding: 15px;
+    color: #0065FC;
+    margin-right: 13px;
+}
+
+#familial
+{
+    height: 30px;
+    display: flex;
+    border:2px solid #F2F2F2;
+    padding: 10px 20px 10px 0;
+    border-radius: 40px;
+    align-items: center;
+}
+
+#logo_child
+{
+    border:1px solid #DEEBFF;
+    background-color: #DEEBFF;
+    border-radius: 40px;
+    padding: 15px 20px 15px 20px;
+    color: #0065FC;
+    margin-right: 13px;
+}
+
+#romantique
+{
+    height: 30px;
+    display: flex;
+    border:2px solid #F2F2F2;
+    padding: 10px 20px 10px 0;
+    border-radius: 40px;
+    align-items: center;
+}
+
+#logo_coeur
+{
+    border:1px solid #DEEBFF;
+    background-color: #DEEBFF;
+    border-radius: 40px;
+    padding: 15px 17px 15px 17px;
+    color: #0065FC;
+    margin-right: 13px;
+}
+
+#animaux_autorisé
+{
+    height: 30px;
+    display: flex;
+    border:2px solid #F2F2F2;
+    padding: 10px 20px 10px 0;
+    border-radius: 40px;
+    align-items: center;
+}
+
+#logo_chien
+{
+    border:1px solid #DEEBFF;
+    background-color: #DEEBFF;
+    border-radius: 40px;
+    padding: 15px;
+    color: #0065FC;
+    margin-right: 13px;
+}
