--- a/reservia.css
+++ b/reservia.css
@@ -26,18 +26,6 @@
     font-display: swap;
 }
 
-@font-face {
-    font-family: 'Raleway';
-    src: url('Raleway-Bold.eot');
-    src: url('Raleway-Bold.eot?#iefix') format('embedded-opentype'),
-        url('Raleway-Bold.woff2') format('woff2'),
-        url('Raleway-Bold.woff') format('woff'),
-        url('Raleway-Bold.ttf') format('truetype'),
-        url('Raleway-Bold.svg#Raleway-Bold') format('svg');
-    font-weight: bold;
-    font-style: normal;
-    font-display: swap;
-}
 
 body
 {
@@ -60,19 +48,18 @@ header
 {
     width: 95px;
     height: 45px;
-    margin-top: 35px;
+    margin-top: 50px;
     margin-left: 50px;
 }
 
-nav li
+nav 
 {
-    margin-top: 20px;
     margin-right: 80px;
     display: flex;
     flex-direction: row;
     align-items: flex-end;
-    list-style-type: none;
-    font-size: 0.9em;
+    font-size: 1em;
+    margin-bottom: 30px;
 }
 
 nav a
@@ -80,12 +67,13 @@ nav a
     color: black;
     text-decoration: none;
     margin-right: 18px;
+    margin-left: 65px;
 }
 
 a:hover
 {
     border-top: 2px solid #0065FC;
-    padding-top: 32px;
+    padding-top: 48px;
     color: #0065FC;
 }
 
@@ -99,30 +87,30 @@ a:hover
 
 
 
-#P1 p
+.tittle1 h1
 {
     margin-top: 35px;
     margin-left: 50px;
-    margin-bottom: 0;
+    margin-bottom: 10px;
     font-size: 1.5em;
     font-weight: bold;
 }
 
-#P2 p
+.span1 span
 {
     margin-top: 10px;
     margin-left: 50px;
-
 }
 
 /*recherche localisation*/
 
-#localisation
+#location
 {
     display: flex;
+    margin-top: 20px;
 }
 
-#logo_loc
+.logo_loc
 {
     padding: 17px 18px 15px 20px;
     border: 1px solid #F2F2F2;
@@ -131,7 +119,7 @@ a:hover
     border-radius: 20px 0 0 20px;
 }
 
-#nom_de_ville
+.input
 {
     border: 1px solid #F2F2F2;
 }
@@ -151,7 +139,7 @@ input[type="text"]:focus
     outline:none;
 }
 
-#bouton_rechercher
+.search_button
 {
     width: 140px;
     border:1px solid #0065FC;
@@ -160,7 +148,7 @@ input[type="text"]:focus
     padding-top: 15px;
 }
 
-#button
+.button
 {
     background-color: #0065FC;
     border: none;
@@ -174,7 +162,7 @@ input[type="text"]:focus
 
 /*Filtres*/
 
-#filtres
+#filters
 {
     display: flex;
     flex-direction: row;
@@ -185,6 +173,12 @@ input[type="text"]:focus
     font-size: 1.3em;
     justify-content: space-between;
     text-align: center;
+}
+
+#filters h1
+{
+    font-size: 0.8em;
+    font-weight: bold;
 }
 
 .btn
