--- a/reservia.css
+++ b/reservia.css
@@ -102,7 +102,7 @@ a:hover
     margin-left: 50px;
 }
 
-/*recherche localisation*/
+/*location chearch*/
 
 #location
 {
@@ -166,6 +166,11 @@ p label
     cursor: pointer;
 }
 
+.logo_search
+{
+    display: none;
+}
+
 
 /*Filtres*/
 
@@ -192,6 +197,7 @@ p label
 {
     border: 1px solid #F2F2F2;
     background: none;
+    outline: none;
     cursor: pointer;
     padding: 22px 22px;
     transition: 0.8s;
