--- a/reservia.css
+++ b/reservia.css
@@ -336,3 +336,91 @@ p label
 {
     margin-left: 15px;
 }
+
+/*hosting and most popular*/
+
+.section
+{
+    display: flex;
+    margin: 30px 50px 0 50px;
+}
+
+/*hosting*/
+
+.hosting
+{
+    width: 880px;
+    height: 625px;
+    background-color: #F2F2F2;
+    padding: 50px 40px 0px 40px;
+    border-radius: 20px;
+}
+
+#pics_hosting
+{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.pics_hosting img
+{
+    width: 235px;
+    height: 200px;
+    border: 4px solid white;
+    border-radius: 20px;
+    position: relative;
+    margin-bottom: 40px;
+}
+
+.description_pics_top
+{
+    position: absolute;
+    top: 697px;
+    background-color: white;
+    width: 228px;
+    border-radius: 0 0 20px 20px;
+    padding-left: 15px;
+    padding-bottom: 10px;
+}
+
+.description_pics_bottom
+{
+    position: absolute;
+    top: 949px;
+    background-color: white;
+    width: 228px;
+    border-radius: 0 0 20px 20px;
+    padding-left: 15px;
+    padding-bottom: 10px;
+}
+
+.pics_hosting h2 
+{
+    font-size: 1.03em;
+    margin-bottom: 4px;
+}
+
+.pics_hosting span
+{
+    font-size: 0.9em;
+}
+
+.stars
+{
+    margin-top: 5px;
+    display: flex;
+    flex-direction: row;
+    padding-bottom: 5px;
+}
+
+.stars_blue
+{
+    color: #0065FC;
+}
+
+.stars_grey
+{
+    color: #d9d9d9;
+    padding-left: 5px;
+}
