--- a/reservia.css
+++ b/reservia.css
@@ -424,3 +424,104 @@ p label
     color: #d9d9d9;
     padding-left: 5px;
 }
+
+/*Most popular*/
+
+.most_popular
+{
+    width: 420px;
+    height: 625px;
+    background-color: #F2F2F2;
+    margin-left: 40px;
+    padding: 50px 40px 0px 40px;
+    border-radius: 20px;
+}
+
+.header
+{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.header h1
+{
+    margin-right: 120px;
+}
+
+#logo_header
+{
+    font-size: 22px;
+}
+
+#pics_most_popular
+{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+
+.pics_most_popular img
+{
+    width: 150px;
+    height: 135px;
+    border: 4px solid white;
+    border-radius: 20px;
+    position: relative;
+    margin-bottom: 40px;
+}
+
+.description_pics_most_popular1
+{
+    position: absolute;
+    top: 576px;
+    background-color: white;
+    width: 215px;
+    height: 143px;
+    right: 90px;
+    border-radius: 0 20px 20px 0;
+    padding-left: 20px;
+}
+
+.description_pics_most_popular2
+{
+    position: absolute;
+    top: 763px;
+    background-color: white;
+    width: 215px;
+    height: 143px;
+    right: 90px;
+    border-radius: 0 20px 20px 0;
+    padding-left: 20px;
+}
+
+.description_pics_most_popular3
+{
+    position: absolute;
+    top: 950px;
+    background-color: white;
+    width: 215px;
+    height: 143px;
+    right: 90px;
+    border-radius: 0 20px 20px 0;
+    padding-left: 20px;
+}
+
+.pics_most_popular h2 
+{
+    font-size: 1.03em;
+    margin-bottom: 4px;
+}
+
+.pics_most_popular span
+{
+    font-size: 0.9em;
+}
+
+.stars_most_popular
+{
+    margin-top: 35px;
+    display: flex;
+    flex-direction: row;
+}
