--- a/reservia.css
+++ b/reservia.css
@@ -367,6 +367,7 @@ p label
 {
     width: 235px;
     height: 200px;
+    object-fit: cover;
     border: 4px solid white;
     border-radius: 20px;
     position: relative;
@@ -466,6 +467,7 @@ p label
 {
     width: 150px;
     height: 135px;
+    object-fit: cover;
     border: 4px solid white;
     border-radius: 20px;
     position: relative;
@@ -524,4 +526,148 @@ p label
     margin-top: 35px;
     display: flex;
     flex-direction: row;
+}
+
+/*activity*/
+
+
+.pics_activity
+{
+    display: flex;
+    flex-direction: row;
+}
+
+.pics1
+{
+    margin-right: 45px;
+    border-radius: 20px;
+}
+
+.pics1 img
+{
+    width: 302px;
+    height: 445px;
+    object-fit: cover;
+    border-radius: 20px;
+    box-shadow: 0px 0px 10px  #d9d9d9;
+}
+
+.pics2
+{
+    margin-right: 45px;
+    border-radius: 20px;
+}
+
+.pics2 img
+{
+    width: 302px;
+    height: 238px;
+    object-fit: cover;
+    border-radius: 20px;
+    box-shadow: 0px 0px 10px  #d9d9d9;
+}
+
+.pics3
+{
+    position: absolute;
+    left: 398px;
+    top: 1514px;
+    border-radius: 20px;
+}
+.pics3 img
+{
+    width: 302px;
+    height: 164px;
+    object-fit: cover;
+    border-radius: 20px;
+    box-shadow: 0px 0px 10px  #d9d9d9;
+
+}
+
+.pics4
+{
+    border-radius: 20px;
+}
+
+.pics4 img
+{
+    width: 302px;
+    height: 195px;
+    object-fit: cover;
+    border-radius: 20px;
+    box-shadow: 0px 0px 10px  #d9d9d9;
+}
+
+.pics5
+{
+    position: absolute;
+    left: 1093px;
+    top: 1470px;
+    border-radius: 20px;
+}
+
+.pics5 img
+{
+    width: 302px;
+    height: 208px;
+    object-fit: cover;
+    border-radius: 20px;
+    box-shadow: 0px 0px 10px  #d9d9d9;
+}
+
+.pics_activity h2
+{
+font-size: 1em;
+padding-left: 20px;
+}
+
+.pics1 h2
+{
+    position: absolute;
+    top: 1606px;
+    background-color: white;
+    width: 282px;
+    padding: 20px 0px 20px 20px;
+    border-radius: 0px 0px 20px 20px;
+}
+
+
+.pics2 h2
+{
+    position: absolute;
+    top: 1399px;
+    background-color: white;
+    width: 282px;
+    padding: 20px 0px 20px 20px;
+    border-radius: 0px 0px 20px 20px;
+}
+
+.pics3 h2
+{
+    position: absolute;
+    top: 92px;
+    background-color: white;
+    width: 282px;
+    padding: 20px 0px 20px 20px;
+    border-radius: 0px 0px 20px 20px;
+}
+
+.pics4 h2
+{
+    position: absolute;
+    top: 1356px;
+    background-color: white;
+    width: 282px;
+    padding: 20px 0px 20px 20px;
+    border-radius: 0px 0px 20px 20px;
+}
+
+.pics5 h2
+{
+    position: absolute;
+    top: 136px;
+    background-color: white;
+    width: 282px;
+    padding: 20px 0px 20px 20px;
+    border-radius: 0px 0px 20px 20px;
 }
