--- a/reservia.css
+++ b/reservia.css
@@ -54,7 +54,7 @@ header
 
 nav 
 {
-    margin-right: 80px;
+    margin-right: 30px;
     display: flex;
     flex-direction: row;
     align-items: flex-end;
@@ -62,12 +62,23 @@ nav
     margin-bottom: 30px;
 }
 
+.nav_hosting
+{
+    color: #0065FC;
+    border-top: 2px solid #0065FC;
+    padding-top: 48px;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
 nav a
 {
     color: black;
     text-decoration: none;
     margin-right: 18px;
-    margin-left: 65px;
+    margin-left: 30px;
+    padding-left: 20px;
+    padding-right: 20px;
 }
 
 a:hover
@@ -75,6 +86,8 @@ a:hover
     border-top: 2px solid #0065FC;
     padding-top: 48px;
     color: #0065FC;
+    padding-left: 20px;
+    padding-right: 20px;
 }
 
 #inscription
@@ -670,4 +683,65 @@ padding-left: 20px;
     width: 282px;
     padding: 20px 0px 20px 20px;
     border-radius: 0px 0px 20px 20px;
+}
+
+/*footer*/
+
+footer
+{
+    display: flex;
+    flex-direction: row;
+    margin-top: 62px;
+    height: 218px;
+    background-color: #F2F2F2;
+}
+
+footer span
+{
+    font-size: 0.9em;
+}
+
+footer h3
+{
+    font-size: 1em;
+}
+
+.footer_about
+{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin: 20px 250px 54px 50px;
+}
+
+.footer_hosting
+{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin-top: 20px;
+    margin-bottom: 85px;
+}
+
+.footer_assistance
+{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin-left: 320px;
+    margin-top: 20px;
+    margin-bottom: 85px;
+}
+
+footer a
+{
+    text-decoration: none;
+    color: black;
+}
+
+footer a:hover
+{
+    border: none;
+    padding: 0;
+    color: black;
 }
