--- a/reservia.css
+++ b/reservia.css
@@ -358,6 +358,12 @@ p label
     margin: 30px 50px 0 50px;
 }
 
+.section a:hover
+{
+    padding: 0;
+    border: none;
+}
+
 /*hosting*/
 
 .hosting
