--- a/reservia.css
+++ b/reservia.css
@@ -366,7 +366,7 @@ p label
 
 /*hosting*/
 
-.hosting
+.contains_hosting
 {
     width: 880px;
     height: 625px;
@@ -382,15 +382,76 @@ p label
     justify-content: space-between;
 }
 
-.pics_hosting img
+.pics_hosting_1
 {
     width: 235px;
     height: 200px;
-    object-fit: cover;
     border: 4px solid white;
     border-radius: 20px;
-    position: relative;
     margin-bottom: 40px;
+    background-image: url('images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg');
+    background-size: 105%;
+    background-position: bottom 60px right 0;
+}
+
+.pics_hosting_2
+{
+    width: 235px;
+    height: 200px;
+    border: 4px solid white;
+    border-radius: 20px;
+    margin-bottom: 40px;
+    background-image: url('images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg');
+    background-size: 105%;
+    background-position: bottom 60px right 0;
+}
+
+.pics_hosting_3
+{
+    width: 235px;
+    height: 200px;
+    border: 4px solid white;
+    border-radius: 20px;
+    margin-bottom: 40px;
+    background-image: url('images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg');
+    background-size: 105%;
+    background-position: bottom 60px right 0;
+}
+
+.pics_hosting_4
+{
+    width: 235px;
+    height: 200px;
+    border: 4px solid white;
+    border-radius: 20px;
+    margin-bottom: 40px;
+    background-image: url('images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg');
+    background-size: 105%;
+    background-position: bottom 25px right 0;
+}
+
+.pics_hosting_5
+{
+    width: 235px;
+    height: 200px;
+    border: 4px solid white;
+    border-radius: 20px;
+    margin-bottom: 40px;
+    background-image: url('images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg');
+    background-size: 105%;
+    background-position: bottom 65px right 0;
+}
+
+.pics_hosting_6
+{
+    width: 235px;
+    height: 200px;
+    border: 4px solid white;
+    border-radius: 20px;
+    margin-bottom: 40px;
+    background-image: url('images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg');
+    background-size: 105%;
+    background-position: bottom 330px right 0;
 }
 
 .description_pics_top
@@ -399,10 +460,9 @@ p label
     top: 697px;
     background-size: cover;
     background-color: white;
-    width: 228px;
-    border-radius: 0 0 20px 20px;
+    width: 224px;
+    border-radius: 0 0 15px 15px;
     padding-left: 15px;
-    padding-bottom: 10px;
 }
 
 .description_pics_bottom
@@ -410,19 +470,18 @@ p label
     position: absolute;
     top: 949px;
     background-color: white;
-    width: 228px;
-    border-radius: 0 0 20px 20px;
+    width: 224px;
+    border-radius: 0 0 15px 15px;
     padding-left: 15px;
-    padding-bottom: 10px;
 }
 
-.pics_hosting h2 
+#pics_hosting h2 
 {
     font-size: 1.03em;
     margin-bottom: 4px;
 }
 
-.pics_hosting span
+#pics_hosting span
 {
     font-size: 0.9em;
 }
