--- a/reservia.css
+++ b/reservia.css
@@ -702,15 +702,29 @@ p label
     object-fit: cover;
     border-radius: 20px;
     box-shadow: 0px 0px 10px  #d9d9d9;
-
 }
 
 .pics4
 {
+    margin-right: 45px;
     border-radius: 20px;
 }
 
 .pics4 img
+{
+    width: 302px;
+    height: 445px;
+    object-fit: cover;
+    border-radius: 20px;
+    box-shadow: 0px 0px 10px  #d9d9d9;
+}
+
+.pics5
+{
+    border-radius: 20px;
+}
+
+.pics5 img
 {
     width: 302px;
     height: 195px;
@@ -719,7 +733,7 @@ p label
     box-shadow: 0px 0px 10px  #d9d9d9;
 }
 
-.pics5
+.pics6
 {
     position: absolute;
     left: 1093px;
@@ -727,7 +741,7 @@ p label
     border-radius: 20px;
 }
 
-.pics5 img
+.pics6 img
 {
     width: 302px;
     height: 208px;
@@ -776,7 +790,7 @@ padding-left: 20px;
 .pics4 h2
 {
     position: absolute;
-    top: 1356px;
+    top: 1606px;
     background-color: white;
     width: 282px;
     padding: 20px 0px 20px 20px;
@@ -784,6 +798,16 @@ padding-left: 20px;
 }
 
 .pics5 h2
+{
+    position: absolute;
+    top: 1356px;
+    background-color: white;
+    width: 282px;
+    padding: 20px 0px 20px 20px;
+    border-radius: 0px 0px 20px 20px;
+}
+
+.pics6 h2
 {
     position: absolute;
     top: 136px;
