--- a/small-device.css
+++ b/small-device.css
@@ -18,8 +18,10 @@
 
     nav
     {
-        border-bottom: 2px solid #F2F2F2;
-        width: 375px;
+        position: absolute;
+        top: 100px;
+        border-bottom: 3px solid #F2F2F2;
+        width: 215px;
         margin:0;
     }
 
@@ -28,21 +30,21 @@
         margin: 0;
         padding-left: 40px;
         padding-right: 65px;
-        padding-bottom: 25px;
+        padding-bottom: 12px;
     }
 
     .nav_hosting
     {
-        width: 167px;
+        width: 160px;
         border: none;
-        border-bottom: 2px solid #0065FC;
-        padding: 0px 35px 25px 40px;
+        border-bottom: 3px solid #0065FC;
+        padding: 0px 0px 12px 40px;
     }
 
     a:hover
     {
         padding: 0;
-        border-bottom: 2px solid #0065FC;
+        border-bottom: 3px solid #0065FC;
         border-top: none;
         padding-bottom: 25px;
         padding-left: 40px;
@@ -52,7 +54,7 @@
     #inscription
     {
         position: absolute;
-        top: 43px;
+        top: -56px;
         right: 10px;
         font-weight: 600;
         border: none;
