--- a/reservia.css
+++ b/reservia.css
@@ -30,7 +30,7 @@
 body
 {
     background-color: white;
-    width: 100%;
+    width: auto;
     font-family: 'Raleway', serif;
     margin: auto;
 }
