reorganisation index.html

--- a/reservia.css
+++ b/reservia.css
@@ -30,7 +30,7 @@
 body
 {
     background-color: white;
-    width: auto;
+    width: 1440px;
     font-family: 'Raleway', serif;
     margin: auto;
 }
