--- a/reservia.css
+++ b/reservia.css
@@ -31,11 +31,12 @@ body
 {
     background-color: white;
     font-family: 'Raleway', serif;
+    margin: 0;
 }
 
-.block_pages
+#block_pages
 {
-    width: 900px;
+    width: 100%;
     margin: auto;
 }
 
