--- a/reservia.css
+++ b/reservia.css
@@ -53,46 +53,38 @@ header
 {
     width: 95px;
     height: 45px;
-    margin-top: 50px;
-    margin-left: 50px;
+    margin: 50px 0 0 50px;
 }
 
 nav 
 {
-    margin-right: 30px;
+    margin: 0 30px 30px 0;
     display: flex;
     flex-direction: row;
     align-items: flex-end;
     font-size: 1em;
-    margin-bottom: 30px;
 }
 
 .nav_hosting
 {
     color: #0065FC;
     border-top: 2px solid #0065FC;
-    padding-top: 48px;
-    padding-left: 20px;
-    padding-right: 20px;
+    padding: 48px 20px 0 20px;
 }
 
 nav a
 {
     color: black;
     text-decoration: none;
-    margin-right: 18px;
-    margin-left: 30px;
-    padding-left: 20px;
-    padding-right: 20px;
+    margin: 0 18px 0 30px;
+    padding: 0 20px 0 20px;
 }
 
 a:hover
 {
     border-top: 2px solid #0065FC;
-    padding-top: 48px;
+    padding: 48px 20px 0 20px;
     color: #0065FC;
-    padding-left: 20px;
-    padding-right: 20px;
 }
 
 #inscription
@@ -107,17 +99,14 @@ a:hover
 
 .section_title h1
 {
-    margin-top: 35px;
-    margin-left: 50px;
-    margin-bottom: 10px;
+    margin: 35px 0 10px 50px;
     font-size: 1.4em;
     font-weight: 600;
 }
 
 .section_sub-title span
 {
-    margin-top: 10px;
-    margin-left: 50px;
+    margin: 10px 0 0 50px;
 }
 
 /*location chearch*/
@@ -198,8 +187,7 @@ p label
     display: flex;
     flex-direction: row;
     width: 67%;
-    margin-top: 30px;
-    margin-left: 60px;
+    margin: 30px 0 0 60px;
     font-weight: bold;
     font-size: 1.3em;
     justify-content: space-between;
@@ -242,8 +230,7 @@ p label
 {
     border: 3px solid #F2F2F2;
     border-radius: 40px;
-    padding-left: 75px;
-    padding-top: 17px;
+    padding: 0 25px 0 65px;
     height: 56px;
     font-weight: bold;
     font-size: 0.8em;
@@ -268,8 +255,7 @@ p label
 {
     border: 3px solid #F2F2F2;
     border-radius: 40px;
-    padding-left: 75px;
-    padding-top: 17px;
+    padding: 0 25px 0 65px;
     height: 56px;
     font-weight: bold;
     font-size: 0.8em;
@@ -294,8 +280,7 @@ p label
 {
     border: 3px solid #F2F2F2;
     border-radius: 40px;
-    padding-left: 75px;
-    padding-top: 17px;
+    padding: 0 25px 0 65px;
     height: 56px;
     font-weight: bold;
     font-size: 0.8em;
@@ -320,8 +305,7 @@ p label
 {
     border: 3px solid #F2F2F2;
     border-radius: 40px;
-    padding-left: 75px;
-    padding-top: 17px;
+    padding: 0 25px 0 65px;
     height: 56px;
     font-weight: bold;
     font-size: 0.8em;
@@ -337,10 +321,9 @@ p label
 
 .informations
 {
+    margin: 20px 0 0 60px;
     display: flex;
-    margin-left: 60px;
     align-items: center;
-    margin-top: 20px;
 }
 
 .logo_informations
@@ -396,49 +379,13 @@ p label
     color: black;
 }
 
-.hosting_2 a
-{
-    width: 235px;
-    height: 200px;
-    color: black;
-}
-
-.hosting_3 a
-{
-    width: 235px;
-    height: 200px;
-    color: black;
-}
-
-.hosting_4 a
-{
-    width: 235px;
-    height: 200px;
-    color: black;
-}
-
-.hosting_5 a
-{
-    width: 235px;
-    height: 200px;
-    color: black;
-}
-
-.hosting_6 a
-{
-    width: 235px;
-    height: 200px;
-    color: black;
-}
-
 .picture_hosting_1
 {
     width: 235px;
     height: 200px;
     border: 4px solid white;
     border-radius: 20px;
-    margin-bottom: 40px;
-    margin-left: 5px;
+    margin: 0 0 40px 5px;
     background-image: url('images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg');
     background-size: 105%;
     background-position: bottom 60px right 0;
@@ -872,8 +819,7 @@ footer h3
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    margin-top: 20px;
-    margin-bottom: 85px;
+    margin: 20px 0 85px 0;
 }
 
 .footer_assistance
@@ -881,9 +827,7 @@ footer h3
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    margin-left: 320px;
-    margin-top: 20px;
-    margin-bottom: 85px;
+    margin: 20px 0 85px 320px;
 }
 
 footer a
